name:                compiler-llvm
version:             0.1.0.0
synopsis:            Toy project to get familiar with LLVM API
license:             MIT
category:            Compilers
homepage:            https://github.com/jtfell/compiler-llvm
license-file:        LICENSE
author:              Julian Fell
maintainer:          julesfell@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository    head
  type: git
  location: git://github.com/jtfell/compiler-llvm.git
  branch: llvm-4

executable main
  build-depends:       
    base         >= 4.6 && <5.0,
    bytestring   >= 0.10,
    mtl          >= 2.2,
    containers   >= 0.5,
    llvm-hs      >= 5.0,
    llvm-hs-pure >= 5.0

  other-modules:
    Codegen

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
